Changed profile photo and added some more info

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -60,8 +61,14 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#education">Education</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#workexperience">Work</a>
+                    </li>
+                    <!-- <li class="page-scroll">
+                        <a href="#contact">Contact</a>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -74,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive img-circle" src="img/profile.jpg" alt="Peter Bennington Profile Photo">
                     <div class="intro-text">
                         <span class="name">Peter Bennington</span>
                         <hr class="star-light">
@@ -102,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -125,7 +132,12 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="row">
+                <div class="col-lg-12">
+                    <p>Here are a few of the projects I have worked on that I am proud of. Some are from university coursework, some are professional work and some are just personal projects that I feel showcase my skills and abilities as a computing student.</p>
+                </div>
+            </div>
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -154,7 +166,7 @@
                         </div>
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -169,11 +181,83 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am a 22-year-old student from Northern Ireland,studying Applied Computing at the University of Dundee, Scotland. This September, I will begin my 4th and final year of study, with the aim of achieving a 2:1 BSc Honours degree classification. I have chosen "Audio Augmented Reading" as my honours project. I plan on pursuing a career in web development, and currently I am finishing off my summer internship converting an older website from ASP Classic to ASP.Net.</p>
+                <div class="col-lg-12">
+                    <p>My name is Peter Bennington and I am a 22-year-old student from Northern Ireland, studying Applied Computing at the University of Dundee, Scotland. This September, I begin my 4th and final year of university, with the aim of achieving a 2:1 BSc Honours degree classification. After graduation I plan on pursuing a career in web or app development.</p>
+                
+                    <p>Outside of my academic activity, I enjoy exercising and playing sports. I have been playing hockey competitively for over a decade now, first for teams in Banbridge, but since I moved to Scotland, I play for Dundee University Men's Hockey Club. As well as the university competition (BUCS), DUMHC are also a club team, playing in Scottish National Division 3.</p>
+
+                    <p>Another interest of mine is film and television. I like a wide variety of genres, but I would have to admit my favourite movie genre is action and adventure. Despite never reading comic books as a kid, I am loving the Marvel superhero movies. I also love TV shows like Sons of Anarchy, The Big Bang Theory and Parks and Recreation. </p>
+
+                    <p>Travelling is another passion of mine. I would love to see every country in the world and experience their cultures. Four years ago, I took part in the Lions International Youth Exchange in Belgium and I had such a great time that I went again the following year, to Denmark. At first, I was worried about going somewhere for 3 weeks without knowing a single person there, but now I've made friends from all over the world and I hope to visit each of them again sometime in the future.</p>
+                </div>   
+            </div>
+        </div>
+    </section>
+
+        <!-- Education Section -->
+    <section id="education">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Education</h2>
+                    <hr class="star-primary">
                 </div>
-                <div class="col-lg-4">
-                    <p>Outside of my academic studies, I am a keen hockey player. I play for the DUMHC 1st XI, the universty men's team. This year I joined the club committee for the first time, taking on the role of Communications Officer. This will give me the opportunity to manage the club website and social media, useful experience for my career and also a chance to give something back to my club.</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h3><i class="fa fa-fw fa-graduation-cap"></i> University</h3>
+                   <p><strong>BSc (Hons) Applied Computing</strong><br>
+                    I started my course in September 2012 and I am working hard to achieve a 2:1 degree classification in 2016. Through my studies I have gained experience in range of different computing technologies. My preference lies in Web Development, and as an optional extra module, I worked as a Web Developer over the summer. This was a great experience in a professional working environment and I really enjoyed the work I was doing. 
+                   </p><br>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6">    
+                    <p>Fourth Year Modules:
+                        <ul>
+                            <li>Honours Project: "Encouraging Literacy through Audio-Augmented Reading"</li>
+                            <li>Computer Vision</li>
+                            <li>Technology Innovation Management</li>
+                            <li>Industrial Team Project</li>
+                            <li>Research Frontiers</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6">    
+                    <p>Third Year Modules:
+                        <ul>
+                            <li>Data Communications & Networks</li>
+                            <li>Relational Databases</li>
+                            <li>Internet Programming</li>
+                            <li>Agile Software Development</li>
+                            <li>Games Programming</li>
+                            <li>Human Usability Engineering</li>
+                            <li>Summer Internship - Web Developer</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6">    
+                    <p>Second Year Modules:
+                        <ul>
+                            <li>Programming & Data Structures</li>
+                            <li>Computer Systems: Architecture & UNIX</li>
+                            <li>Computer Systems: Operating Systems</li>
+                            <li>Object Oriented Analysis & Design</li>
+                            <li>Algorithms & Artificial Intelligence</li>
+                            <li>Statistics & Discrete Mathematics</li>
+                            <li>Argumentation & Computers</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6">    
+                    <p>First Year Modules:
+                        <ul>
+                            <li>Software Development</li>
+                            <li>Web Authoring</li>
+                            <li>Data Structures & Algorithms</li>
+                            <li>Physical Computing</li>
+                            <li>Mathematics</li>
+                            <li>Pure Mathematics</li>
+                        </ul>
+                    </p>       
                 </div>
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -184,8 +268,32 @@
         </div>
     </section>
 
+    <!-- Work Experience Section -->
+    <section class="success" id="workexperience">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Work Experience</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <h3 class="text-center">Web Content Management</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum impedit mollitia, tempore quam. Consequatur perspiciatis cum atque magni cupiditate asperiores expedita non maiores est quibusdam, reprehenderit fuga, repudiandae, delectus. Quibusdam corrupti saepe excepturi repellendus at impedit ab quia qui non! Dicta vel qui quisquam rem magnam eaque totam alias cum.</p>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <h3 class="text-center">Intern Web Developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum impedit mollitia, tempore quam. Consequatur perspiciatis cum atque magni cupiditate asperiores expedita non maiores est quibusdam, reprehenderit fuga, repudiandae, delectus. Quibusdam corrupti saepe excepturi repellendus at impedit ab quia qui non! Dicta vel qui quisquam rem magnam eaque totam alias cum.</p>
+                </div>    
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+    <!--  <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -195,8 +303,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -237,7 +343,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
@@ -281,6 +387,9 @@
                     <div class="col-lg-12">
                         Copyright &copy; Peter Bennington 2015
                     </div>
+                    <div class="col-lg-12">
+                        <small>This website was made using the <a href="http://getbootstrap.com" target="blank"> Twitter Bootstrap</a> framework. It is hosted on <a href="http://github.com" target="blank">GitHub</a> Pages and uses <a href="http://fortawesome.github.io/Font-Awesome/" target="blank">FontAwesome</a> icons.</small>
+                    </div>    
                 </div>
             </div>
         </div>
@@ -306,22 +415,20 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Starship Stockpile</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <p>Starship Stockpile is a lunar lander game that I created in my 3rd year Games Programming module at university. The game was built using the HTML5 framework, Phaser. This was my first time using JavaScript and I really enjoyed working on this project.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Peter Bennington</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                    <strong>May 2015</strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                    <strong>Game Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
