--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                     <img class="img-responsive img-circle" src="img/profile.jpg" alt="Peter Bennington Profile Photo">
                     <div class="intro-text">
                         <span class="name">Peter Bennington</span>
-                        <hr class="star-light">
                         <span class="skills">Computing Student - Aspiring Web Developer</span>
                     </div>
                 </div>
@@ -109,7 +108,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="img/StarshipStockpile.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -133,7 +132,7 @@
                     </a>
                 </div>
                 <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-10 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                     <p>Here are a few of the projects I have worked on that I am proud of. Some are from university coursework, some are professional work and some are just personal projects that I feel showcase my skills and abilities as a computing student.</p>
                 </div>
             </div>
@@ -280,11 +279,25 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <h3 class="text-center">Web Content Management</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum impedit mollitia, tempore quam. Consequatur perspiciatis cum atque magni cupiditate asperiores expedita non maiores est quibusdam, reprehenderit fuga, repudiandae, delectus. Quibusdam corrupti saepe excepturi repellendus at impedit ab quia qui non! Dicta vel qui quisquam rem magnam eaque totam alias cum.</p>
+                    <p class ="text-center">Ridgeway, Belfast</p>
+                    <p>In the summer of 2013 I got the opportunity to work as part of the Sanphire design team in Northern Ireland. They were working on a website a new website for their client, Ridgeway. My job was migrating the content from the old website to the new site, powered by the Wordpress CMS.<br><br>Responsibilities included:</p>
+                    <ul>
+                        <li>creating webpages using Wordpress</li>
+                        <li>information gathering by interviewing and emailing the staff at the client company</li>
+                        <li>transferring content from the old site to the new one</li>
+                        <li>collaboration with the Sanphire design team</li>
+                    </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <h3 class="text-center">Intern Web Developer</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum impedit mollitia, tempore quam. Consequatur perspiciatis cum atque magni cupiditate asperiores expedita non maiores est quibusdam, reprehenderit fuga, repudiandae, delectus. Quibusdam corrupti saepe excepturi repellendus at impedit ab quia qui non! Dicta vel qui quisquam rem magnam eaque totam alias cum.</p>
+                    <p class="text-center">University of Dundee</p>
+                    <p>For the optional 3rd year Summer Placement module of my course, I was employed as an intern web developer at the Clinical Technology Centre, Ninewells Hospital in Dundee. My task was to redesign the existing website and make it more mobile friendly.<br><br>Responsibilities included:</p>
+                    <ul>
+                        <li>analysing the current site</li>
+                        <li>upgrading the Classic ASP code to ASP.Net</li>
+                        <li>improve the site's aesthetics and responsiveness</li>
+                        <li>test compatibility across a variety of browsers and mobile devices</li>
+                    </ul>
                 </div>    
             </div>
         </div>
@@ -417,12 +430,14 @@
                         <div class="modal-body">
                             <h2>Starship Stockpile</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <img src="img/StarshipStockpile.png" class="img-responsive img-centered" alt="">
+                            <button type="button" class="btn btn-success" href="#"> Play the Game</button>
+                            <br><br>
                             <p>Starship Stockpile is a lunar lander game that I created in my 3rd year Games Programming module at university. The game was built using the HTML5 framework, Phaser. This was my first time using JavaScript and I really enjoyed working on this project.</p>
+                            
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong>Peter Bennington</a>
-                                    </strong>
+                                    <strong>Peter Bennington</strong>
                                 </li>
                                 <li>Date:
                                     <strong>May 2015</strong>
